<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/text_size" />

    <SeekBar
        android:id="@+id/seek_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progressBackgroundTint="@android:color/darker_gray" />

    <TextView
        android:id="@+id/text_rotation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/text_rotation" />

    <SeekBar
        android:id="@+id/seek_text_rotation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progressBackgroundTint="@android:color/darker_gray" />

    <TextView
        android:id="@+id/text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/text_color_r_g_b"
        android:textColor="#000000" />

    <SeekBar
        android:id="@+id/seek_text_color_red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="100"
        android:progressBackgroundTint="@android:color/darker_gray"
        android:progressTint="#ff0000" />

    <SeekBar
        android:id="@+id/seek_text_color_green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="100"
        android:progressBackgroundTint="@android:color/darker_gray"
        android:progressTint="#00ff00" />

    <SeekBar
        android:id="@+id/seek_text_color_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="100"
        android:progressBackgroundTint="@android:color/darker_gray"
        android:progressTint="#0000ff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1.0"
            android:background="@android:drawable/btn_default"
            android:text="@string/ok" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@android:drawable/btn_default"
            android:text="@string/cancel" />

    </LinearLayout>
</LinearLayout>